--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
 <body>
     <div class="container-fluid" style="background-color: #e9d8ff !important;">
      <div class="row">
+        <div class="col-md-12 p-1">
+            <img src="https://raw.githubusercontent.com/jorat-imarque/Textiiee/main/public/AppImages/Textiiee/Logo.png" class="img-thumbnail rounded" alt="..." style="
+           background-color: #dfcff4;
+        ">
+            </div>
             <div class="col-md-12 p-1">
                 <div class="card shadow">
                     <div class="card-header d-flex">
@@ -54,11 +59,16 @@
                     <div class="card-footer">
                         <div class="row p-1">
                             <form class="d-flex"  enctype="multipart/form-data" action="/upload" method="post">
-                            <div class="col-10 shadow p-1">
+                            <div class="col-9 shadow p-1">
                                     <input class="form-control"  type="file" name="file" id="file">
                                 </div>
-                                <div class="col-2 shadow p-1" >
-                                    <button class="btn btn-defualt btn-block" style="width: 100%;"  type="submit">Upload</button>
+                                <div class="col-3 shadow p-1" >
+                                    <button class="btn btn-defualt btn-block" style="width: 100%;"  type="submit">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-cloud-plus" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd" d="M8 5.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V10a.5.5 0 0 1-1 0V8.5H6a.5.5 0 0 1 0-1h1.5V6a.5.5 0 0 1 .5-.5z"/>
+                                            <path d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383zm.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z"/>
+                                          </svg>
+                                    </button>
                                 </div>
                         </form>
                 </div>
@@ -66,9 +76,7 @@
                 </div>
             </div>
             <div class="col-md-12 shadow">
-              
                 <div class="table table-responsive">
-              
                     <table id="fileTable" class="table table-sm table-bordered " style="display: none;">
                       <thead>
                         <tr>
